--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800');
+@import '../../settings/mixins';
+
+$buttonColor: red;
 
 @keyframes FadeIn {
 	from {
@@ -97,7 +100,7 @@
 
 .LoginPage__Password {
 	border: 1px solid #cfc7c4;
-	width: 400px;
+	width: 300px;
 	padding: 10px 5px;
 	border-radius: 5px;
 	font-size: 17px;
@@ -110,19 +113,34 @@
 	  perspective: 1000px;
 	}
 
-	&--typedIn {
-		width: 325px;
-		margin-left: -75px;
+	@include breakpoint(med) {
+		&--typedIn {
+			width: 325px;
+			margin-left: -75px;
+		}
 	}
+
 }
 
+.LoginPage__ButtonContainer {
+		display: block;
+		text-align: center;
+}
 .Btn {
-	height: 42px;
+	display: inline-block;
+	width: 100%;
+	max-width: 150px;
 	border: none;
-	padding: 0 20px;
-	margin: 0;
-	width: 67px;
-	margin-left: 8px;
+	padding: 10px 20px;
+	margin: 20px 0 0 0;
+	background-color: $buttonColor;
+	color: #fff;
+
+	a {
+		color: inherit;
+		text-decoration: none;
+		font-size: 20px;
+	}
 }
 
 .ErrorMessage {
