--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -86,16 +86,28 @@
   padding: 10px 5px;
   border-radius: 5px;
   font-size: 17px;
-  transition: all .15s ease-in-out; }
+  transition: all .15s ease-in-out;
+  outline: none; }
   .LoginPage__Password--error {
     animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
     transform: translate3d(0, 0, 0);
     backface-visibility: hidden;
-    perspective: 1000px; }
+    perspective: 1000px;
+    border-color: #f75947; }
   @media (min-width: 991px) {
     .LoginPage__Password--typedIn {
       width: 325px;
       margin-left: -75px; } }
+
+.ShowPassword {
+  display: block;
+  text-align: right;
+  margin: 8px 5px 0 0;
+  color: #ccc;
+  font-size: 12px;
+  position: absolute;
+  top: 41px;
+  right: 5px; }
 
 .LoginPage__ButtonContainer {
   display: block;
@@ -116,9 +128,7 @@
     font-size: 20px; }
 
 .ErrorMessage {
-  position: absolute;
-  bottom: -55px;
-  left: 0;
+  margin: 5px 0 0 5px;
   animation: smallFadeIn .25s ease-in-out;
   animation-fill-mode: forwards; }
 
