--- a/src/components/SaveTheDate/savethedate.scss
+++ b/src/components/SaveTheDate/savethedate.scss
@@ -1,3 +1,6 @@
+@import '../../settings/reset';
+@import '../../settings/mixins';
+
 $brown: #f4efe7;
 $sandstone: #726d5d;
 $mainBackground: $brown;
@@ -6,13 +9,10 @@ $copyColor: $sandstone;
 @import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One');
 
 .LockUp {
-	background-color: $mainBackground;
-	background-image:url(lockup.png);
-	background-size: 100%;
+	background-color: #EBE6E0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
 	width: 100%;
 	height: 100vh;
 	position: relative;
@@ -22,21 +22,25 @@ $copyColor: $sandstone;
 		font-weight: 300;
 		text-transform: uppercase;
 		letter-spacing: 1px;
-		margin-bottom: 15px;
+		margin: 20px 0 50px 0;
 		font-size:11vw;
 		color: $copyColor;
-		position: absolute;
-		top: 60px;
 	}
 
 	p {
-		position: absolute;
-		top: 500px;
 		font-family: 'Raleway', sans-serif;
 		font-weight: 300;
+		font-size: 15px;
 		color: $copyColor;
-		width: 450px;
 		text-align: center;
+		padding: 0 20px;
+	}
+
+	@include breakpoint(med) {
+		background-color: $mainBackground;
+		background-image:url(lockup.png);
+		background-size: cover;
+		justify-content: center;
 	}
 }
 
