--- a/src/components/SaveTheDate/savethedate.scss
+++ b/src/components/SaveTheDate/savethedate.scss
@@ -1,15 +1,20 @@
 @import '../../settings/reset';
 @import '../../settings/mixins';
 
+$siteCoral: #f75947;
+$siteYellow: yellow;
+
 $brown: #f4efe7;
-$sandstone: #726d5d;
+$slate: #726d5d;
 $mainBackground: $brown;
-$copyColor: $sandstone;
+$copyColor: $slate;
+$button_color:  $slate;
+$hover: $siteYellow;
 
 @import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One');
 
 .LockUp {
-	background-color: #EBE6E0;
+	background-color: #edeae4;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -19,12 +24,16 @@ $copyColor: $sandstone;
 
 	h1 {
 		font-family: 'Raleway', sans-serif;
-		font-weight: 300;
-		text-transform: uppercase;
-		letter-spacing: 1px;
+		font-weight: 700;
 		margin: 20px 0 50px 0;
-		font-size:11vw;
+		font-size:7vw;
 		color: $copyColor;
+	}
+
+	h2 {
+		font-family: 'Alfa Slab One';
+		color: $copyColor;
+		font-size: 12vw;
 	}
 
 	p {
@@ -36,11 +45,33 @@ $copyColor: $sandstone;
 		padding: 0 20px;
 	}
 
-	@include breakpoint(med) {
-		background-color: $mainBackground;
-		background-image:url(lockup.png);
-		background-size: cover;
-		justify-content: center;
+	.word {
+		margin-right: 2vw;
+
+		&:last-child {
+			margin-right: 0px;
+		}
+	}
+
+	.save {
+		.s {color: #4bbbec;}
+		.a {color: #14b07f;}
+		.v {color: #a6c62d;}
+		.e {color: #f17569;}
+	}
+
+	.the {
+		.t {color: #deab31;}
+		.h {color: #f45a48;}
+		.e {color: #eb165e;}
+	}
+
+	.date {
+		.d {color: #00aeb5;}
+		.a {color: #4bbbec;}
+		.t {color: #f77fb6;}
+		.e {color: #f45a48;}
+		.exp {color: #deab31;}
 	}
 }
 
@@ -60,4 +91,127 @@ $copyColor: $sandstone;
 	background-size: cover;
 	padding-bottom: 23%;
 	display: block;
+}
+
+
+form {
+  width: 100%;
+  margin-top: 30px;
+
+  @include breakpoint(med) {
+
+    .first_name, .last_name {
+      width: 48%;
+    }
+
+    .first_name {
+      float: left;
+      margin-right: 2%;
+    }
+
+    .last_name {
+      float: right;
+      margin-left: 2%;
+    }
+  }
+
+	input:not([type='submit']), textarea, select {
+	  border: 1px solid #DADADA;
+	  color: #888;
+	  margin-bottom: 25px;
+	  margin-right: 6px;
+	  margin-top: 2px;
+	  outline: 0 none;
+	  padding: 10px 5px;
+	  font-size: 12px;
+	  line-height: 22px;
+	  box-shadow: inset 0px 1px 4px #ECECEC;
+	  -moz-box-shadow: inset 0px 1px 4px #ECECEC;
+	  -webkit-box-shadow: inset 0px 1px 4px #ECECEC;
+	  @include font-size(16px);
+	  letter-spacing: 1px;
+	}
+
+	input, textarea, select {
+	  display: block;
+	  width: 100%;
+	}
+
+	label {
+	  display: block;
+	  margin: 0px;
+	}
+
+	label > span {
+	  float: left;
+	  width: 20%;
+	  text-align: right;
+	  padding-right: 10px;
+	  margin-top: 10px;
+	  color: #888;
+	}
+
+	textarea {
+	  padding: 10px;
+	  height: 200px;
+	  line-height: 24px;
+	}
+
+	textarea.active {
+	  margin-bottom: 0;
+	}
+
+	input[type="submit"] {
+	    @include font-size(16px);
+	    background-color: $button_color;
+	    color: #fff;
+	    display: inline-block;
+	    width: 100%;
+	    padding: 14px 36px;
+	    text-align: center;
+	    text-decoration: none;
+	    margin: 10px 0;
+	    cursor: pointer;
+	    letter-spacing: 2px;
+	    text-transform: uppercase;
+	    @include transition(background-color 0.15s ease);
+	    border: none;
+	    position: relative;
+	    z-index: 2;
+
+	    &:hover {
+	      background-color: $hover;
+	    }
+
+	    @include breakpoint (med) {
+	      display: inline-block;
+	      width: auto;
+	    }
+	}
+
+}
+
+
+
+
+.required-message, .error-message { color: #c43b1d; display: none; font-size: 13px; } .required~.required-message, .error~.error-message { display: block; }
+
+.success_message {
+  visibility: hidden;
+  opacity: 0;
+  @include transform(translateY(50px));
+  @include transition(all .5s ease-in-out);
+  height: 0;
+}
+
+.submitted {
+  .ss-form-question, #ss-submit {
+    display: none;
+  }
+  .success_message {
+    opacity: 1;
+    visibility: visible;
+    @include transform(translateY(20px));
+    height: auto;
+  }
 }
