--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800');
 @import '../../settings/mixins';
 
-$siteCoral: #f75947;
+$slate: #726d5d;
+$coral: #f75947;
 
-$buttonColor: $siteCoral;
-$errorColor: $siteCoral;
+$buttonColor: $slate;
+$hover: $coral;
+$errorColor: $coral;
 
 @keyframes FadeIn {
 	from {
@@ -43,6 +45,7 @@ $errorColor: $siteCoral;
   }
 }
 
+
 .LoginPage {
 	display: flex;
 	width: 100%;
@@ -55,6 +58,15 @@ $errorColor: $siteCoral;
 			justify-content: center;
 			padding-top: 0;
 	}
+
+	.p {color: #e6ab2c;}
+	.a {color: #f75947;}
+	.s {color: #f77fb6;}
+	.s2 {color: #4bbbec;}
+	.w {color: #00aeb5;}
+	.o {color: #eb165e;}
+	.r {color: #f17569;}
+	.d {color: #accc2d;}
 }
 
 .LoginPage__Title {
@@ -130,13 +142,6 @@ $errorColor: $siteCoral;
 	  perspective: 1000px;
 		border-color: $errorColor;
 	}
-
-	@include breakpoint(med) {
-		&--typedIn {
-			width: 325px;
-			margin-left: -75px;
-		}
-	}
 }
 
 .ShowPassword {
@@ -159,30 +164,32 @@ $errorColor: $siteCoral;
 	width: 100%;
 	max-width: 150px;
 	border: none;
-	padding: 10px 20px;
-	margin: 20px 0 0 0;
+	padding: 8px 20px;
+	margin: 35px 0 0 0;
 	background-color: $buttonColor;
 	color: #fff;
+	cursor: pointer;
+	@include transition(all .15s ease-in-out)
 
 	a {
 		color: inherit;
 		text-decoration: none;
 		font-size: 20px;
+		text-transform: uppercase;
+	}
+
+	&:hover {
+		background-color: $hover;
 	}
 }
 
 .ErrorMessage {
+	position: absolute;
 	margin: 5px 0 0 5px;
 	animation: smallFadeIn .25s ease-in-out;
 	animation-fill-mode:forwards;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 300;
+	font-size: 15px;
+	color: $errorColor;
 }
-
-
-.p {color: #e6ab2c;}
-.a {color: #f75947;}
-.s {color: #f77fb6;}
-.s2 {color: #4bbbec;}
-.w {color: #00aeb5;}
-.o {color: #eb165e;}
-.r {color: #f17569;}
-.d {color: #accc2d;}
