--- a/src/components/SaveTheDate/savethedate.scss
+++ b/src/components/SaveTheDate/savethedate.scss
@@ -1,26 +1,32 @@
 @import '../../settings/reset';
 @import '../../settings/mixins';
 
-$siteCoral: #f75947;
-$siteYellow: yellow;
+$magenta: #eb165e;
+$orange: #f45a48;
 
 $brown: #f4efe7;
 $slate: #726d5d;
 $mainBackground: $brown;
 $copyColor: $slate;
-$button_color:  $slate;
-$hover: $siteYellow;
+$button_color:  $magenta;
+
+$hover: $orange;
 
 @import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One');
 
 .LockUp {
 	background-color: #edeae4;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 	width: 100%;
 	height: 100vh;
-	position: relative;
+
+	&__Content {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		position: relative;
+		max-width: 1024px;
+		margin: auto;
+	}
 
 	h1 {
 		font-family: 'Raleway', sans-serif;
@@ -28,12 +34,21 @@ $hover: $siteYellow;
 		margin: 20px 0 50px 0;
 		font-size:7vw;
 		color: $copyColor;
+
+		@include breakpoint(med) {
+			font-size: 50px;
+			margin: 50px 0;
+		}
 	}
 
 	h2 {
 		font-family: 'Alfa Slab One';
 		color: $copyColor;
 		font-size: 12vw;
+
+		@include breakpoint(med) {
+			font-size: 100px
+		}
 	}
 
 	p {
@@ -43,6 +58,18 @@ $hover: $siteYellow;
 		color: $copyColor;
 		text-align: center;
 		padding: 0 20px;
+		margin: 30px 0;
+		max-width: 670px;
+
+		a {
+			color: inherit;
+			white-space: nowrap;
+		}
+
+		@include breakpoint(med) {
+			font-size: 20px;
+		}
+
 	}
 
 	.word {
@@ -50,6 +77,10 @@ $hover: $siteYellow;
 
 		&:last-child {
 			margin-right: 0px;
+		}
+
+		@include breakpoint(med) {
+			margin-right: 15px;
 		}
 	}
 
@@ -62,15 +93,15 @@ $hover: $siteYellow;
 
 	.the {
 		.t {color: #deab31;}
-		.h {color: #f45a48;}
-		.e {color: #eb165e;}
+		.h {color: $orange;}
+		.e {color: $magenta;}
 	}
 
 	.date {
 		.d {color: #00aeb5;}
 		.a {color: #4bbbec;}
 		.t {color: #f77fb6;}
-		.e {color: #f45a48;}
+		.e {color: $orange;}
 		.exp {color: #deab31;}
 	}
 }
@@ -96,7 +127,7 @@ $hover: $siteYellow;
 
 form {
   width: 100%;
-  margin-top: 30px;
+	max-width: 333.33px;
 
   @include breakpoint(med) {
 
@@ -115,22 +146,22 @@ form {
     }
   }
 
-	input:not([type='submit']), textarea, select {
-	  border: 1px solid #DADADA;
-	  color: #888;
-	  margin-bottom: 25px;
-	  margin-right: 6px;
-	  margin-top: 2px;
-	  outline: 0 none;
-	  padding: 10px 5px;
-	  font-size: 12px;
-	  line-height: 22px;
-	  box-shadow: inset 0px 1px 4px #ECECEC;
-	  -moz-box-shadow: inset 0px 1px 4px #ECECEC;
-	  -webkit-box-shadow: inset 0px 1px 4px #ECECEC;
-	  @include font-size(16px);
-	  letter-spacing: 1px;
-	}
+	// input:not([type='submit']), textarea, select {
+	//   border: 1px solid #DADADA;
+	//   color: #888;
+	//   margin-bottom: 25px;
+	//   margin-right: 6px;
+	//   margin-top: 2px;
+	//   outline: 0 none;
+	//   padding: 10px 5px;
+	//   font-size: 12px;
+	//   line-height: 22px;
+	//   box-shadow: inset 0px 1px 4px #ECECEC;
+	//   -moz-box-shadow: inset 0px 1px 4px #ECECEC;
+	//   -webkit-box-shadow: inset 0px 1px 4px #ECECEC;
+	//   @include font-size(16px);
+	//   letter-spacing: 1px;
+	// }
 
 	input, textarea, select {
 	  display: block;
@@ -202,6 +233,12 @@ form {
   @include transform(translateY(50px));
   @include transition(all .5s ease-in-out);
   height: 0;
+	margin: 0 !important;
+	padding: 0 !important;
+
+	span {
+		text-decoration: underline;
+	}
 }
 
 .submitted {
