--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -22,7 +22,7 @@ $errorColor: $coral;
 @keyframes smallFadeIn {
 	from {
 		opacity: 0;
-		transform: translateY(5px);
+		transform: translateY(-5px);
 	}
 	to {
 		opacity: 100%;
@@ -135,14 +135,14 @@ input {
 	transition: all .15s ease-in-out;
 	outline: none;
 	margin-bottom: 20px;
+}
 
-	&--error {
-		animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-	  transform: translate3d(0, 0, 0);
-	  backface-visibility: hidden;
-	  perspective: 1000px;
-		border-color: $errorColor;
-	}
+.LoginPage__Password--error {
+	animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+	transform: translate3d(0, 0, 0);
+	backface-visibility: hidden;
+	perspective: 1000px;
+	border-color: $errorColor;
 }
 
 .ShowPassword {
@@ -154,6 +154,7 @@ input {
 	position: absolute;
 	top: 41px;
 	right: 5px;
+	cursor: pointer;
 }
 
 .LoginPage__ButtonContainer {
@@ -185,11 +186,17 @@ input {
 
 .ErrorMessage {
 	position: absolute;
-	margin: 5px 0 0 5px;
-	animation: smallFadeIn .25s ease-in-out;
-	animation-fill-mode:forwards;
+	top: 0;
+	padding: 4px 0;
+	background-color: #f75947;
+	width: 100%;
 	font-family: 'Raleway', sans-serif;
 	font-weight: 300;
 	font-size: 15px;
-	color: $errorColor;
+	text-align: center;
+	color: #fff;
+	-webkit-animation: smallFadeIn .25s ease-in-out;
+	animation: smallFadeIn .25s ease-in-out;
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
 }
