--- a/src/components/SaveTheDate/savethedate.css
+++ b/src/components/SaveTheDate/savethedate.css
@@ -16,10 +16,20 @@ html {
 em {
   font-weight: bold; }
 
+@keyframes FadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 100%; } }
+
 .LockUp {
   background-color: #edeae4;
   width: 100%;
-  height: 100vh; }
+  height: 100vh;
+  -webkit-animation: FadeIn .25s ease-in-out;
+  animation: FadeIn .25s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards; }
   .LockUp__Content {
     display: flex;
     flex-direction: column;
