--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -101,10 +101,13 @@ input {
   width: 300px;
   padding: 10px 5px;
   border-radius: 5px;
-  font-size: 17px;
+  font-size: 15px;
   transition: all .15s ease-in-out;
   outline: none;
   margin-bottom: 20px; }
+  @media (min-width: 1024px) {
+    input {
+      font-size: 17px; } }
 
 .LoginPage__Password--error {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
