--- a/src/components/SaveTheDate/savethedate.css
+++ b/src/components/SaveTheDate/savethedate.css
@@ -25,7 +25,7 @@ em {
 .LockUp {
   background-color: #edeae4;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   -webkit-animation: FadeIn .25s ease-in-out;
   animation: FadeIn .25s ease-in-out;
   -webkit-animation-fill-mode: forwards;
@@ -41,7 +41,7 @@ em {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     margin: 20px 0 30px 0;
-    font-size: 11vw;
+    font-size: 8vw;
     color: #726d5d; }
     @media (min-width: 1024px) {
       .LockUp h1 {
@@ -50,7 +50,7 @@ em {
   .LockUp h2 {
     font-family: 'Alfa Slab One';
     color: #726d5d;
-    font-size: 9vw; }
+    font-size: 11vw; }
     @media (min-width: 1024px) {
       .LockUp h2 {
         font-size: 100px; } }
@@ -102,15 +102,14 @@ em {
     color: #deab31; }
 
 .FormContainer {
-  width: 100%;
-  margin: 30px auto;
+  width: 90%;
+  margin: 0 auto 30px auto;
   padding: 0 20px;
   max-width: 500px; }
   @media (min-width: 1024px) {
     .FormContainer {
       width: auto;
-      max-width: none;
-      margin: 30px auto; } }
+      max-width: none; } }
 
 .Container {
   background-color: #f4efe7;
@@ -161,12 +160,12 @@ form {
   form textarea.active {
     margin-bottom: 0; }
   form input[type="submit"] {
-    font-size: 16px;
+    font-size: 15px;
     background-color: #eb165e;
     color: #fff;
     display: inline-block;
     width: 100%;
-    padding: 14px 36px;
+    padding: 12px 36px;
     text-align: center;
     text-decoration: none;
     cursor: pointer;
@@ -181,6 +180,7 @@ form {
       background-color: #f45a48; }
     @media (min-width: 1024px) {
       form input[type="submit"] {
+        font-size: 16px;
         display: inline-block;
         width: 100%; } }
 
@@ -192,7 +192,7 @@ form {
 .required ~ .required-message, .error ~ .error-message {
   display: block; }
 
-.success_message {
+p.success_message {
   visibility: hidden;
   opacity: 0;
   -ms-transform: translateY(50px);
@@ -202,9 +202,12 @@ form {
   transition: all 0.5s ease-in-out;
   height: 0;
   margin: 0 !important;
-  padding: 0 !important; }
-  .success_message span {
+  padding: 0 !important;
+  overflow: hidden; }
+  p.success_message span {
     text-decoration: underline; }
+  p.success_message--reload {
+    margin: 0; }
 
 .submitted .ss-form-question, .submitted #ss-submit {
   display: none; }
