--- a/src/components/SaveTheDate/savethedate.scss
+++ b/src/components/SaveTheDate/savethedate.scss
@@ -28,7 +28,7 @@ $hover: $orange;
 .LockUp {
 	background-color: #edeae4;
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	-webkit-animation: FadeIn .25s ease-in-out;
 	animation: FadeIn .25s ease-in-out;
 	-webkit-animation-fill-mode: forwards;
@@ -47,7 +47,7 @@ $hover: $orange;
 		font-family: 'Raleway', sans-serif;
 		font-weight: 700;
 		margin: 20px 0 30px 0;
-		font-size:11vw;
+		font-size:8vw;
 		color: $copyColor;
 
 		@include breakpoint(med) {
@@ -59,7 +59,7 @@ $hover: $orange;
 	h2 {
 		font-family: 'Alfa Slab One';
 		color: $copyColor;
-		font-size: 9vw;
+		font-size: 11vw;
 
 		@include breakpoint(med) {
 			font-size: 100px
@@ -122,15 +122,14 @@ $hover: $orange;
 }
 
 .FormContainer {
-	width: 100%;
-	margin: 30px auto;
+	width: 90%;
+	margin: 0 auto 30px auto;
 	padding: 0 20px;
 	max-width: 500px;
 
 	@include breakpoint(med) {
 		width: auto;
 		max-width: none;
-		margin: 30px auto;
 	}
 }
 
@@ -225,12 +224,12 @@ form {
 	}
 
 	input[type="submit"] {
-	    font-size: 16px;
+	    font-size: 15px;
 	    background-color: $button_color;
 	    color: #fff;
 	    display: inline-block;
 	    width: 100%;
-	    padding: 14px 36px;
+	    padding: 12px 36px;
 	    text-align: center;
 	    text-decoration: none;
 	    cursor: pointer;
@@ -246,6 +245,7 @@ form {
 	    }
 
 	    @include breakpoint (med) {
+				font-size: 16px;
 	      display: inline-block;
 	      width: 100%;
 	    }
@@ -258,7 +258,7 @@ form {
 
 .required-message, .error-message { color: #c43b1d; display: none; font-size: 13px; } .required~.required-message, .error~.error-message { display: block; }
 
-.success_message {
+p.success_message {
   visibility: hidden;
   opacity: 0;
   @include transform(translateY(50px));
@@ -266,9 +266,14 @@ form {
   height: 0;
 	margin: 0 !important;
 	padding: 0 !important;
+	overflow: hidden;
 
 	span {
 		text-decoration: underline;
+	}
+
+	&--reload {
+		margin: 0;
 	}
 }
 
