--- a/src/components/Invitation/invitation.scss
+++ b/src/components/Invitation/invitation.scss
@@ -36,6 +36,10 @@ h3 {
 	text-transform: uppercase;
 }
 
+p {
+	margin-bottom: 20px;
+}
+
 .mobileMenu {
 	position: absolute;
 	top: 0;
@@ -119,6 +123,10 @@ h3 {
 	animation: FadeIn .25s ease-in-out;
 	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
+	background-image: url(bg.jpg);
+	background-size: 234%;
+	background-position: -283% 0px;
+	padding-bottom: 24%;
 
 	&__Content {
 		display: flex;
@@ -130,7 +138,7 @@ h3 {
 	}
 
 	h1 {
-		font-family: 'Raleway', sans-serif;
+		font-family: 'Alfa Slab One';
 		font-weight: 700;
 		margin: 20px 0 30px 0;
 		font-size:8vw;
@@ -143,8 +151,8 @@ h3 {
 	}
 
 	h2 {
-		font-family: 'Alfa Slab One';
-		color: $copyColor;
+		font-family: 'Raleway', sans-serif;
+		color: #fff;
 		font-size: 11vw;
 
 		@include breakpoint(med) {
@@ -185,27 +193,27 @@ h3 {
 		}
 	}
 
-	.save {
-		.s {color: #4bbbec;}
-		.a {color: #14b07f;}
-		.v {color: #a6c62d;}
-		.e {color: #f17569;}
+	.Emma {
+		.e {color: #edb12d;}
+		.m {color: #ff5c49;}
+		.m2 {color: #ff83bc;}
+		.a {color: #4dc1f4;}
 	}
 
-	.the {
-		.t {color: #deab31;}
-		.h {color: $orange;}
-		.e {color: $magenta;}
+	.and {
+		color: #fff;
 	}
 
-	.date {
-		.d {color: #00aeb5;}
-		.a {color: #4bbbec;}
-		.t {color: #f77fb6;}
-		.e {color: $orange;}
-		.exp {color: #deab31;}
+	.Chris {
+		.c {color: #00b4bb;}
+		.h {color: #f31761;}
+		.r {color: #f17569;}
+		.i {color: #accc2d;}
+		.s {color: #0bb588;}
 	}
 }
+
+
 .SectionWhite, .SectionDark {
 	padding: 20px 20px;
 }
